--- a/pcapac16/WEPOPRPO22_hla/WEPOPRPO22.tex
+++ b/pcapac16/WEPOPRPO22_hla/WEPOPRPO22.tex
@@ -84,7 +84,7 @@ To achieve this goal, the Accelerator Physics Group started developing these app
 \section{APPLICATIONS FRAMEWORK}
 Figure \ref{fig:f1} shows a schematic view of the application framework Sirius will use for HLA development. On a lower level, services are categorized in two groups: IOCs and machine applications. Both of them are Channel Access servers, the first providing control access to machine hardware while the second providing machine services. Machine applications developed so far were written in Python using PCASpy~\cite{pcaspy}. Virtual IOCs were implemented using EPICS Database on top of VACA in order to provide simulated fluctuations for machine parameters. EPICS V4 is another option for implementing machine applications that will be studied and discussed next year.
 
-On top of Fig. \ref{fig:f1} are the HLAs. For basic process variable monitoring and settings with graphical user interface capabilities, CS-Studio was chosen due to its simplicity and fast learning curve. Most of the control system interface is expected to be implemented with CS-Studio. For software that requires elaborate logic, algorithms will either be implemented in the IOC level with simple driving GUI clients or using other options, such as PyQt or MML.
+On top of Fig. \ref{fig:f1} are the client applications. For basic process variable monitoring and settings with graphical user interface capabilities, CS-Studio was chosen due to its simplicity and fast learning curve. Most of the control system interface is expected to be implemented with CS-Studio. For software that requires elaborate logic, algorithms will either be implemented in the IOC level with simple driving GUI clients or using other options, such as PyQt or MML.
 
 The control system can benefit from various support applications for storing and organizing system's parameters, IOC software, device and PV name lists, and so on. The plan is to use a few of the applications in development under the DISCS collaboration effort~\cite{discs_article,discs_openepics}. The device naming and configuration modules of DISCS are currently being tested and used in the HLA development framework. Other DISCS modules, such as its logbook, IOC  and machine save/restore services, will soon be tested as well.
 
