--- a/pcapac16/WEPOPRPO22_hla/lifetime.tex
+++ b/pcapac16/WEPOPRPO22_hla/lifetime.tex
@@ -1,6 +1,6 @@
 \subsection{Lifetime Calculation}
 
-Another example of implemented HLA is the lifetime calculation. Just as in the case of the SOFB system, here two separate application modules were are created. In order to simplify the client application, the algorithm that computes beam lifetime was moved to a machine application implemented in EPICS DB, while the client application was designed in CS-Studio. The calculation method in the machine application is the same as the one already in use in the UVX storage ring and that has been proven reliable and stable over the years. The details of its implementation can be found here~\cite{lifetime}.
+Another example of implemented HLA is the lifetime calculation. Just as in the case of the SOFB system, here two separate application modules were created. In order to simplify the user interface, the algorithm that computes beam lifetime was moved to a machine application implemented in EPICS DB, while the client application was designed in CS-Studio. The calculation method in the machine application is the same as the one already in use in the UVX storage ring and that has been proven reliable and stable over the years. The details of its implementation can be found here~\cite{lifetime}.
 
 As always with beam lifetime calculations, there is a trade off between precision and quick response to lifetime variations. This trade off is realized by means of two input parameters, precision and sampling time, that define the time window and number of points for the lifetime calculation. In the user interface it is possible to display the lifetime in units of hours, minutes or seconds, as shown in Fig.~\ref{fig:lifetimef1}. Being able to display lifetime in minutes or seconds might be useful specially on the early days of machine commissioning.
 
