Underline presenter's name

--- a/pcapac16/WEPOPRPO21_vaca/Poster/WEPOPRPO21poster.tex
+++ b/pcapac16/WEPOPRPO21_vaca/Poster/WEPOPRPO21poster.tex
@@ -15,7 +15,7 @@
 \newcolumntype{Z}{>{\centering\arraybackslash}X} % centered tabularx columns
 
 \title{\huge Development of a Virtual Accelerator for Sirius}
-\author{\underline{X. R. Resende}, A. H. C. Mukai, L. N. P. Vilela, I. Stevani}
+\author{X. R. Resende, A. H. C. Mukai, \underline{L. N. P. Vilela}, I. Stevani}
 \institute{Brazilian Synchrotron Light Laboratory (LNLS), Campinas, Brazil}
 \date{\monthname \ \the\year}
 
