Minor change in VA poster

--- a/pcapac16/WEPOPRPO21_vaca/Poster/WEPOPRPO21poster.tex
+++ b/pcapac16/WEPOPRPO21_vaca/Poster/WEPOPRPO21poster.tex
@@ -70,7 +70,7 @@
 							\item Allows for rapid development
 							\item Binding layer between the CA server and a tracking code for simulations.
 							\item The python package PCasPy is used as the CA server module.
-							\item Trackcpp is a C++ library of beam dynamics and tracking routines developed at LNLS by the accelerator physics group. Trackcpp is converted to Python package with Swig3.0						
+							\item Trackcpp is a C++ library of beam dynamics and tracking routines developed at LNLS by the accelerator physics group. This library is converted to a Python package with Swig3.0						
 						\end{itemize}
 						\begin{figure}
 							\centering
