Fix grammar errors

--- a/pcapac16/WEPOPRPO22_hla/WEPOPRPO22.tex
+++ b/pcapac16/WEPOPRPO22_hla/WEPOPRPO22.tex
@@ -71,18 +71,18 @@
 
 %
 \begin{abstract}
-   Has been decided that Sirius will use EPICS as its distributed control system and this year the development of its High Level Applications started. Three development frameworks were chosen for building these applications: CS-Studio~\cite{css}, PyQt~\cite{pyqt} and Matlab Middle Layer~\cite{mml} (MML). Graphical user interfaces (GUI) and machine applications have already been designed and implemented for a few systems using CS-Studio and PyQt: slow orbit feedback, lifetime calculation and top-up injection. Specific Sirius data structures were added to the MML scripts in order to allow for EPICS communication through LabCA~\cite{labca}.
+   Has been decided that Sirius will use EPICS as its distributed control system and this year the development of its high level applications started. Three development frameworks were chosen for building these applications: CS-Studio~\cite{css}, PyQt~\cite{pyqt} and Matlab Middle Layer~\cite{mml} (MML). Graphical user interfaces (GUI) and machine applications have already been designed and implemented for a few systems using CS-Studio and PyQt: slow orbit feedback, lifetime calculation and top-up injection. Specific Sirius data structures were added to the MML scripts in order to allow for EPICS communication through LabCA~\cite{labca}.
 \end{abstract}
 
 
 \section{INTRODUCTION}
-Sirius is a Synchrotron Light Source Facility based on a 4th generation storage ring that is presently under construction at LNLS in Campinas, Brazil. The project initiated in 2008 with the first lattice studies and in the beginning of 2015 the building construction started. Machine commissioning is expected to start mid 2018~\cite{sirius_status}. By this time, indispensable control systems for beam stability -- such as tune measurement, orbit correction, injection -- should be ready for use, and so should their high level applications (HLAs).
+Sirius is a synchrotron light source facility based on a 4th generation storage ring that is presently under construction at LNLS in Campinas, Brazil. The project initiated in 2008 with the first lattice studies and in the beginning of 2015 the building construction started. Machine commissioning is expected to start mid 2018~\cite{sirius_status}. By this time, indispensable control systems for beam stability -- such as tune measurement, orbit correction, injection -- should be ready for use, and so should their high level applications (HLAs).
 
-To achieve this goal, the Accelerator Physics Group started developing these applications this year and should intensify its activity with HLA next year, after most of the group's work related to machine components' specifications -- that is currently taking most of the group efforts -- is done. A Virtual accelerator with channel access server (VACA)~\cite{vaca} has been implemented to emulate the real machine, thus providing a testbed environment for high level software development.
+To achieve this goal, the accelerator physics group started developing these applications this year and should intensify its activity with HLA next year, after most of the group's work related to machine components' specifications -- that is currently taking most of the group efforts -- is done. A virtual accelerator with channel access server (VACA)~\cite{vaca} has been implemented to emulate the real machine, thus providing a testbed environment for high level software development.
 
 
 \section{APPLICATIONS FRAMEWORK}
-Figure \ref{fig:f1} shows a schematic view of the application framework Sirius will use for HLA development. On a lower level, services are categorized in two groups: IOCs and machine applications. Both of them are Channel Access servers, the first providing control access to machine hardware while the second providing machine services. Machine applications developed so far were written in Python using PCASpy~\cite{pcaspy}. Virtual IOCs were implemented using EPICS Database on top of VACA in order to provide simulated fluctuations for machine parameters. EPICS V4 is another option for implementing machine applications that will be studied and discussed next year.
+Figure \ref{fig:f1} shows a schematic view of the application framework Sirius will use for HLA development. On a lower level, services are categorized in two groups: IOCs and machine applications. Both of them are channel access (CA) servers, the first providing control access to machine hardware while the second providing machine services. Machine applications developed so far were written in Python using PCASpy~\cite{pcaspy}. Virtual IOCs were implemented using EPICS Database on top of VACA in order to provide simulated fluctuations for machine parameters. EPICS V4 is another option for implementing machine applications that will be studied and discussed next year.
 
 On top of Fig. \ref{fig:f1} are the client applications. For basic process variable monitoring and settings with graphical user interface capabilities, CS-Studio was chosen due to its simplicity and fast learning curve. Most of the control system interface is expected to be implemented with CS-Studio. For software that requires elaborate logic, algorithms will either be implemented in the IOC level with simple driving GUI clients or using other options, such as PyQt or MML.
 
